update the test page and add additional fixes on icon overlapping on dirty tracker, calendar icon alignment

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -1541,6 +1541,11 @@ $datagrid-small-row-height: 25px;
             }
           }
 
+          .icon.datagrid-alert-icon {
+            height: 15px;
+            width: 16px;
+          }
+
           .icon:not(.datagrid-alert-icon) {
             height: 16px;
             top: 4px;
@@ -1568,7 +1573,7 @@ $datagrid-small-row-height: 25px;
               left: -3px;
             }
 
-            &.icon-error {
+            &.icon-error:not(.datagrid-alert-icon) {
               margin-left: -26px;
             }
           }
@@ -2018,6 +2023,23 @@ $datagrid-small-row-height: 25px;
         &.icon-error {
           margin-left: -45px !important;
         }
+      }
+    }
+  }
+
+  &.small-rowheight,
+  &.extra-small-rowheight {
+    > tbody > tr {
+      .datagrid-alert-icon {
+        height: 15px;
+        width: 16px;
+      }
+    }
+
+    td.is-dirty-cell:not(.rowstatus-cell) {
+      &:before {
+        left: 0;
+        top: -2px;
       }
     }
   }
@@ -2800,12 +2822,10 @@ $datagrid-small-row-height: 25px;
       }
     }
 
-    //Cell Editing
+    //Cell Editting
     &.is-editing {
       background-color: $datagrid-cell-editing-bg-color;
       position: relative;
-      outline: 1px solid $ids-color-brand-primary-base;
-      outline-offset: -1px;
 
       &.has-singlecolumn {
         display: block;
@@ -2813,6 +2833,7 @@ $datagrid-small-row-height: 25px;
       }
 
       .datagrid-cell-wrapper {
+        border: 1px solid $ids-color-brand-primary-base;
         left: 0;
         position: absolute;
         text-overflow: clip;
@@ -4113,7 +4134,7 @@ td .btn-actions {
     }
   }
 
-  .icon-calendar {
+  .icon.icon-calendar {
     height: 16px;
     left: 5px;
     top: -2px;
